# statsd_client_python

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-fmt.txt  requirements-lint.txt  requirements-tests.txt  setup.cfg  setup.py  tox.ini
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  docs.rst  index.rst
requirements/: build.in  build.txt  ci.in  ci.txt  dev.in  dev.txt  docs.in  docs.txt  lint.in  lint.txt  test.in  test.txt
src/statsd/: __init__.py  async_client.py  base.py  client.py  exceptions.py  formats.py
tests/: test_base_async_client.py  test_base_client.py  test_formats.py  test_udp_client.py
